# sokrates

./: .dockerignore  .gitignore  .ignore  .travis.yml  AGENTS.md  CLAUDE.md  LICENSE  PLAN.md  README.md  assembly.xml  buildspec.yml  dockerfile  git-commands.txt  git-contributors-log.txt  git-log-stat.txt  git-log.txt  install.sh  my_conventions.json  pom.xml  shippable.yml  sokrates_standard_conventions.json
_sokrates/: config.json
cli/: README.md  pom.xml
codeanalyzer/: README.md  pom.xml
codeexplorer/: README.md  pom.xml
common/: README.md  pom.xml
common/src/main/resources/: archive.sh  log4j2.properties
docker/: Dockerfile  README.md
docs/: configuration.md
docs/dev/: graphviz-to-mermaid-plan.md  report-fragmentation-reduction-plan.md  visuals-inline-compressed-json-plan.md  visuals-template-zip-plan.md
integrationtests/: pom.xml
kitnetic-wrapper/: README.md  pyproject.toml
kitnetic-wrapper/src/kitnetic_wrapper/: __init__.py  cli.py
reports/: README.md  pom.xml  sokrates.json
website/: README.md  angular.json  package-lock.json  package.json
website/e2e/src/: app.e2e-spec.ts
website/src/: index.html  main.ts  styles.less
website/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
website/src/app/features-page/: features-page.component.html  features-page.component.ts
website/src/app/gallery-page/: gallery-page.component.html  gallery-page.component.less  gallery-page.component.spec.ts  gallery-page.component.ts
website/src/app/header/: header.component.html  header.component.ts
(+1248 files in other folders)
